# quill

./: .behaverc  .gitignore  CHANGELOG.md  Makefile  Quill.py  README.md  devbox.json  package-lock.json  package.json  pyproject.toml  release-please-config.json  ui_mainwindow.py
.github/workflows/: main.yaml  release-please.yml
features/: environment.py  main_window.feature  portfolio.feature
features/steps/: ui.py
frontend/: .gitignore  .prettierignore  package.json  tsconfig.app.tsbuildinfo
frontend/src/: App.tsx  ErrorPage.tsx  main.tsx  routes.tsx
frontend/src/components/: AppSidebar.tsx
ui/: mainwindow.ui
