[tool.poetry]
name = "quill"
version = "0.1.0"
description = ""
authors = ["Aotokitsuruya <contact@aotoki.me>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
PySide6 = { version="^6.7.2", python="^3.12,<3.13" }
Nuitka = "^2.4.8"
fugle-trade = "^1.2.0"

[tool.poetry.group.dev.dependencies]
python-lsp-server = "^1.12.0"
ruff = "^0.6.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
