[tool.poetry]
name = "Quill"
version = "0.1.0"
description = ""
authors = ["Aotokitsuruya <contact@aotoki.me>"]
license = "Apache-2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
Nuitka = "^2.4.9"
fugle-trade = "^1.2.0"

[tool.poetry.group.dev.dependencies]
python-lsp-server = "^1.12.0"
ruff = "^0.6.9"
behave = "^1.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend-exclude = ["ui_mainwindow.py"]
